src/components/Attachment/styling/Giphy.scss
@use '../../../styling/utils' as utils;

.str-chat {
  /* The height of GIFs */
  --str-chat__gif-height: calc(var(--str-chat__spacing-px) * 200);
}

.str-chat__message-attachment-giphy {
  // todo: maybe we do not want to restrict the height
  //height: var(--str-chat__gif-height);
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;

  img.str-chat__base-image {
    @include utils.clamped-height-from-original-image-dimensions(
      '--str-chat__attachment-max-width',
      '--str-chat__attachment-max-width'
    );

    object-fit: contain;
    max-height: var(--str-chat__attachment-max-width);
    max-width: var(--str-chat__attachment-max-width);
    width: 100%;
    cursor: default;
  }
}

.str-chat__giphy-badge {
  display: inline-flex;
  height: 24px;
  padding: var(--spacing-xxxs, 2px) var(--spacing-xs, 8px);
  justify-content: center;
  align-items: center;
  gap: var(--spacing-xxs, 4px);
  position: absolute;
  inset-inline-start: 8px;
  bottom: 8px;

  border-radius: var(--radius-lg, 12px);
  background-color: var(--badge-bg-overlay, rgba(0, 0, 0, 0.75));
  color: var(--badge-text-on-accent, #fff);

  font-size: var(--typography-font-size-xs, 12px);
  font-weight: var(--typography-font-weight-semi-bold, 600);
  line-height: var(--typography-line-height-tight, 16px);
  text-transform: uppercase;
}

.str-chat__message-attachment--giphy--actions {
  .str-chat__visibility-disclaimer {
    display: flex;
    padding: var(--spacing-sm, 12px);
    align-items: center;
    gap: var(--spacing-xs, 8px);
    align-self: stretch;

    color: var(--chat-text-outgoing);
    font-size: var(--typography-font-size-sm);
    font-weight: var(--typography-font-weight-semi-bold);
    line-height: var(--typography-line-height-tight);
  }
}

